; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_bio.c_bioset_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_bio.c_bioset_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bio_set = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bioset_free(%struct.bio_set* %0) #0 {
  %2 = alloca %struct.bio_set*, align 8
  store %struct.bio_set* %0, %struct.bio_set** %2, align 8
  %3 = load %struct.bio_set*, %struct.bio_set** %2, align 8
  %4 = getelementptr inbounds %struct.bio_set, %struct.bio_set* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.bio_set*, %struct.bio_set** %2, align 8
  %9 = getelementptr inbounds %struct.bio_set, %struct.bio_set* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @mempool_destroy(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.bio_set*, %struct.bio_set** %2, align 8
  %14 = call i32 @bioset_integrity_free(%struct.bio_set* %13)
  %15 = load %struct.bio_set*, %struct.bio_set** %2, align 8
  %16 = call i32 @biovec_free_pools(%struct.bio_set* %15)
  %17 = load %struct.bio_set*, %struct.bio_set** %2, align 8
  %18 = call i32 @bio_put_slab(%struct.bio_set* %17)
  %19 = load %struct.bio_set*, %struct.bio_set** %2, align 8
  %20 = call i32 @kfree(%struct.bio_set* %19)
  ret void
}

declare dso_local i32 @mempool_destroy(i64) #1

declare dso_local i32 @bioset_integrity_free(%struct.bio_set*) #1

declare dso_local i32 @biovec_free_pools(%struct.bio_set*) #1

declare dso_local i32 @bio_put_slab(%struct.bio_set*) #1

declare dso_local i32 @kfree(%struct.bio_set*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
